--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ gunicorn==20.1.0
 oauthlib==3.1.1
 psycopg2==2.9.3
 PyJWT==2.3.0
+python-dotenv==0.19.2
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.0
